# eyebrowse

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
crates/eyebrowse/: Cargo.toml
crates/eyebrowse-core/: Cargo.toml
crates/eyebrowse-core/src/: lib.rs
crates/eyebrowse-gpu/: Cargo.toml
crates/eyebrowse-gpu/src/: device.rs  kernel.rs  lib.rs  recorder.rs  tensor.rs  wasm_demo.rs
crates/eyebrowse-kernels/: Cargo.toml
crates/eyebrowse-kernels/src/: attention.rs  lib.rs  matmul.rs  ops.rs  rmsnorm.rs  rope.rs  sampling.rs  softmax.rs  testutil.rs
crates/eyebrowse-load/: Cargo.toml
crates/eyebrowse-load/src/: config.rs  dequant.rs  gguf.rs  lib.rs  source.rs  tokenizer.rs
crates/eyebrowse-load/tests/: load.rs
crates/eyebrowse-models/: Cargo.toml
crates/eyebrowse-models/src/: decoder.rs  gemma4.rs  lib.rs  mistral.rs  model.rs  qwen3.rs  upload.rs
crates/eyebrowse-nn/: Cargo.toml
crates/eyebrowse-nn/src/: attention.rs  embedding.rs  kv_cache.rs  lib.rs  linear.rs  mlp.rs  rmsnorm.rs  rope.rs  tests.rs  testutil.rs
crates/eyebrowse/examples/: generate.rs
crates/eyebrowse/src/: decode.rs  generator.rs  lib.rs  wasm.rs
crates/eyebrowse/tests/: gemma4.rs  generate.rs  gguf.rs  mistral.rs
golden/: gen_gemma4_golden.py  gen_golden.py  gen_mistral_golden.py  qwen3-golden.json
scripts/: browser-generate-test.mjs  browser-test.mjs  fetch-fixtures.sh  make-gguf-fixtures.sh
web/: index.html  qwen3.html
