[package]
name = "eyebrowse-gpu"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
eyebrowse-core = { path = "../eyebrowse-core" }
wgpu.workspace = true
bytemuck.workspace = true
half.workspace = true
log.workspace = true
flume = "0.11"

[dev-dependencies]
pollster.workspace = true
