[package]
name = "eyebrowse-kernels"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
eyebrowse-core = { path = "../eyebrowse-core" }
eyebrowse-gpu = { path = "../eyebrowse-gpu" }
bytemuck.workspace = true
half.workspace = true

[dev-dependencies]
pollster.workspace = true
