[package]
name = "eyebrowse-load"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
eyebrowse-core = { path = "../eyebrowse-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
safetensors = "0.4"
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
half = { workspace = true }
thiserror.workspace = true
