[package]
name = "eyebrowse-load"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
eyebrowse-core = { path = "../eyebrowse-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
safetensors = "0.4"
half = { workspace = true }
thiserror.workspace = true

# The tokenizer (onig C dep) is native-only; wasm builds skip it.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
