[package]
name = "eyebrowse-models"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
eyebrowse-core = { path = "../eyebrowse-core" }
eyebrowse-gpu = { path = "../eyebrowse-gpu" }
eyebrowse-kernels = { path = "../eyebrowse-kernels" }
eyebrowse-nn = { path = "../eyebrowse-nn" }
eyebrowse-load = { path = "../eyebrowse-load" }
bytemuck.workspace = true
half.workspace = true

[dev-dependencies]
pollster.workspace = true
