[package]
name = "eyebrowse-nn"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
eyebrowse-core = { path = "../eyebrowse-core" }
eyebrowse-gpu = { path = "../eyebrowse-gpu" }
eyebrowse-kernels = { path = "../eyebrowse-kernels" }

[dev-dependencies]
pollster.workspace = true
half.workspace = true
