[package]
name = "eyebrowse"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eyebrowse-core = { path = "../eyebrowse-core" }
eyebrowse-gpu = { path = "../eyebrowse-gpu" }
eyebrowse-kernels = { path = "../eyebrowse-kernels" }
eyebrowse-nn = { path = "../eyebrowse-nn" }
eyebrowse-load = { path = "../eyebrowse-load" }
eyebrowse-models = { path = "../eyebrowse-models" }

# Native-only: the tokenizer (onig C dep) does not build on wasm.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[dev-dependencies]
pollster.workspace = true
serde_json = "1"

# wasm-opt isn't installed locally; skip it (release rustc opts are enough for the demo).
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
